force-app/main/default/objects/Attribute__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <description>The completion date of the Credential requirements.</description>
    <inlineHelpText>The completion date of the Credential requirements.</inlineHelpText>
    <label>Activity End Date</label>
    <type>Date</type>
</CustomField>