force-app/main/default/objects/Attribute__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <description>The date that the person started earning the Credential.</description>
    <inlineHelpText>The date that the person started earning the Credential.</inlineHelpText>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>