force-app/main/default/objects/Attribute__c/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <description>The kind of credential or student Attribute.</description>
    <inlineHelpText>The kind of credential or student Attribute.</inlineHelpText>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>Licensure</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Asylee</fullName>
            </value>
            <value>
                <fullName>Economically Disadvantaged</fullName>
            </value>
            <value>
                <fullName>English Learners</fullName>
            </value>
            <value>
                <fullName>Family Consideration</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Free Lunch</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Immigrant</fullName>
            </value>
            <value>
                <fullName>International Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent in Military</fullName>
            </value>
            <value>
                <fullName>Pregnant</fullName>
            </value>
            <value>
                <fullName>Reduced Price Lunch</fullName>
            </value>
            <value>
                <fullName>Refugee</fullName>
            </value>
            <value>
                <fullName>Section 504 Handicapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>