force-app/main/default/objects/Attribute__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Credential that this Attribute applies to.</description>
    <inlineHelpText>The Credential that this Attribute applies to.</inlineHelpText>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>