force-app/main/default/objects/Attribute__c/fields/Credential_Number__c.field-meta.xml
<CustomField>
    <fullName>Credential_Number__c</fullName>
    <description>The certification number or license number of the Attribute&apos;s Credential.</description>
    <inlineHelpText>The certification number or license number of the Attribute&apos;s Credential.</inlineHelpText>
    <label>Credential Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>