force-app/main/default/objects/Attribute__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>More details about the credential or student Attribute.</description>
    <inlineHelpText>More details about the credential or student Attribute.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>