force-app/main/default/objects/Attribute__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date when the credential or Attribute expires or requires renewal.</description>
    <inlineHelpText>The date when the credential or Attribute expires or requires renewal.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>