force-app/main/default/objects/Attribute__c/fields/Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study__c</fullName>
    <description>The field of study for the Attribute&apos;s Credential.</description>
    <formula>TEXT(Credential__r.Field_of_Study__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The field of study for the Attribute&apos;s Credential. Read only.</inlineHelpText>
    <label>Field of Study</label>
    <type>Text</type>
</CustomField>