force-app/main/default/objects/Attribute__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The issue date for the credential or Attribute.</description>
    <inlineHelpText>The issue date for the credential or Attribute.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>