force-app/main/default/objects/Attribute__c/recordTypes/Credential.recordType-meta.xml
<RecordType>
    <fullName>Credential</fullName>
    <active>true</active>
    <description>Allows educational institutions to track licenses, certifications, or endorsements earned by staff or students.</description>
    <label>Credential</label>
</RecordType>